source/icsm/results/results.css
.resultsItemHeading {
	font-weight: bold;
}

.resultsItemLas, .resultsItemPrj, .resultsItemAsc {
	padding-left: 10px;
}

.resultsEven {
	background-color: #eee;
}

.resultsRow {
   border-bottom: 1px solid lightgray;
}

.resultsRow div {
   padding-top: 1px;
   padding-bottom: 1px;
}

.resultsTypeLabel {
   font-weight: bold;
}

.resultsType {
   padding-left:7px;
   display: inline-block;
}

.resultsItem {
   padding-left:8px;
   padding-bottom:6px;
   font-size: 110%;
}

.resultsTopExpander {
   float: right;
   padding-top:30px;
   font-size: 80%;
}

.popover.icsm-abstract-popover {
   max-width: 750px;
}

.popover.icsm-abstract-popover h3 {
   font-size: 110%;
   font-weight: bold;
}

.popover.icsm-abstract-popover .popover-content {
   max-height:300px;
   overflow-y:auto;
}

.icsm-abstract-body h3 {
   display: none;
}

.filter-text {
   float:left;
   width:60%;
}

.filter-type {
   float:right;
}

@media screen and (max-width: 1280px) {
   .filter-text {
      width:100%;
      float: clear;
   }

   .filter-type {
      width:100%;
      float: clear;
   }
}

.results-list {
    position: absolute;
    overflow-y: auto;
    top: 104px;
    overflow-x: hidden;
    bottom: 0;
}

